# ptcee

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: compiler-flags.cmake  coverage-flags.cmake
include/ptcee/: cal_fk.h  covariance.h  gaussian.h  noisy_unit.h  orientation_buffer.h  pan_tilt.h  pt_buffer_factor.h  ptz_estimator.h  ptz_graph.h  rotation_from_pan_tilt.h  scalar.h  timestamp.h  unit2.h  unit_projection_factor.h  vector_traits.h
src/: orientation_buffer.cpp  pan_tilt.cpp  pt_buffer_factor.cpp  ptz_graph.cpp  rotation_from_pan_tilt.cpp  unit2.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test-package.cpp
